--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,7 @@
     <script src="./scripts/directives/tryoperation.js"></script>
     <script src="./scripts/services/sorter.js"></script>
     <script src="./scripts/services/tag-manager.js"></script>
+    <script src="./scripts/services/fold-state-manager.js"></script>
     <script src="./scripts/services/autocomplete.js"></script>
     <script src="./scripts/services/fileloader.js"></script>
     <script src="./scripts/services/editor.js"></script>
